--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,8 @@ jobs:
         run: |
           curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
       # Poetry へのパスを通す
-      - name: Add path for Poetry
-        run: echo "::add-path::$HOME/.poetry/bin"
+      # - name: Add path for Poetry
+      #   run: echo "::add-path::$HOME/.poetry/bin"
       # インストールした Poetry を使って必要な Python パッケージをインストールする
       - name: Install Dependencies
         run: poetry install --no-interaction
